--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> create new article </h1>
+<h1> edited this article </h1>
 <% if @article.errors.any? %>
 <h2> the errors </h2>
 <ul>
@@ -24,5 +24,4 @@
 </p>
 
  <% end %>
-
-<%= link_to "back to all article" , articles_path %>
+ <%= link_to "back to all article" , articles_path %>
