--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
 <h1> showing selected article</h1>
 <p> Title : <%= @article.title %> </p>
 <p> description : <%= @article.description %> </p>
+<%= link_to "edit this article" , edit_article_path(@article) %> |
+
+<%= link_to "back to all article" , articles_path %>
