--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>home fuso </h1>
-<%= link_to 'home' ,about_path %>
+<%= link_to 'fuso alpha' ,articles_path %>|<%= link_to 'about' ,about_path %>
