--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,15 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
     <%flash.each do |name , msg| %>
 
       <ul>
         <li> <%= msg %> </li>
       </ul>
     <% end %>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
