--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>home fuso </h1>
-<%= link_to 'fuso alpha' ,articles_path %>|<%= link_to 'about' ,about_path %>
+<div class="center jumbotron">
+   <h1>Alpha fuso</h1>
+<%= link_to 'sign up now' ,"#" , class: "btn btn-primary btn-lg" %>
+</div>
