--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,10 @@
-<h1> all articles</h1>
+ <div class="container">
+
+ <h1> all articles</h1>
 <p>
    <%= link_to "create new article" , new_article_path %>
 </p>
-<table>
+<table class="table table_stripped">
   <tr>
     <th>title</th>
     <th>description</th>
@@ -12,12 +14,21 @@
   <tr>
     <td><%=  article.title %></td>
     <td><%=  article.description %></td>
+
     <td><%= link_to "edit" , edit_article_path(article)%></td>
     <td><%= link_to "show" , article_path(article)%></td>
     <td><%= link_to "delete", article_path(article) , method: :delete ,data: {confirm: "are you sure"} %></td>
 
+    <td> created by : <%= article.user.username if article.user %>
+    ,   <%=time_ago_in_words (article.created_at)%> ago,
+         last updated :    <%=time_ago_in_words (article.updated_at)  %> ago
+    </td>
+
+
 
   </tr>
+</div>
+
   <% end %>
 
 </table>
